fix(kit): `Slider` has wrong height of the progress in Firefox (#3497)

--- a/projects/kit/components/slider/slider.style.less
+++ b/projects/kit/components/slider/slider.style.less
@@ -164,6 +164,7 @@
 
     /* stylelint-disable-next-line no-duplicate-selectors */
     &::-moz-range-progress {
+        height: @track-height;
         background: @thumb-color;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
